Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6407

memcached does not wait until all items are drained when asked to shut down the engine (Data loss on shutdown)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 2.0
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public

    Description

      In 1.8.1 we had this nailed. Shutdown was waiting for all dirty items to hit disk.

      With latest 2.0 I'm not seeing this. Here's how I reproduced:

      • load 3M items and shutdown all nodes while disk write queue is still > 0
      • start nodes back and observe how many items are after warmup. In 2.0 it's always < 3M

      Same thing works in 1.8.1.

      Here's how I'm stopping all nodes for cluster_run environment: I'm POST-ing rpc:eval_everywhere(ns_bootstrap, stop, []). to /diag/eval. That's same API that our stop action of initscripts is doing.

      Attachments

        For Gerrit Dashboard: MB-6407
        # Subject Branch Project Status CR V

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            alkondratenko Aleksey Kondratenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty