MB-6407 Check incoming and outgoing flusher queues upon shutdown

The soft shutdown should wait until both incoming and outgoing
flusher queues are empty.

Change-Id: I32791bb4757d0d4440c7e393f28694ff5d8f3132
Reviewed-on: http://review.couchbase.org/20296
Reviewed-by: Jin Lim <jin@couchbase.com>
Tested-by: Jin Lim <jin@couchbase.com>